test_suite/tests/compile_error_cases/anon_lifetime_2.rs
struct DummyWrapper<'a>(&'a ());

#[moq::automock]
trait Trait {
    fn f(&self, arg: DummyWrapper<'_>);
}

fn main() {}
